[tool.poetry]
name = "repl_python3_Generator"
version = "0.1.0"
description = ""
authors = ["ValdemarSkjthSk <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
